--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
     "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
   },
   "dependencies": {
-    "@coral-xyz/anchor": "^0.31.1"
+    "@solana/kit": "^5.0.0",
+    "solana-kite": "^1.8.0"
   },
   "devDependencies": {
-    "chai": "^4.3.4",
-    "mocha": "^9.0.3",
-    "ts-mocha": "^10.0.0",
-    "@types/bn.js": "^5.1.0",
-    "@types/chai": "^4.3.0",
-    "@types/mocha": "^9.0.0",
-    "typescript": "^5.7.3",
-    "prettier": "^2.6.2"
-  }
+    "@codama/nodes-from-anchor": "^1.3.6",
+    "@codama/renderers-js": "^1.0.34",
+    "@types/node": "^24.10.1",
+    "codama": "^1.4.4",
+    "prettier": "^2.6.2",
+    "tsx": "^4.21.0",
+    "typescript": "^5.7.3"
+  },
+  "type": "module"
 }
