--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "license": "ISC",
   "scripts": {
-    "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
-    "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
+    "lint:fix": "prettier */*{.js,.ts} \"*/**/*{.js,.ts}\" -w",
+    "lint": "prettier */*{.js,.ts} \"*/**/*{.js,.ts}\" --check"
   },
   "dependencies": {
     "@solana/kit": "^5.0.0",
-    "solana-kite": "^1.8.0"
+    "solana-kite": "^1.8.0",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@codama/nodes-from-anchor": "^1.3.6",
     "@codama/renderers-js": "^1.0.34",
     "@types/node": "^24.10.1",
+    "@types/ws": "^8.18.1",
     "codama": "^1.4.4",
     "prettier": "^2.6.2",
     "tsx": "^4.21.0",
